--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <a href="#" class="logo">
             <div id="location-details"></div>
-            <img src="images/logo copy.png" alt="" id="get-location"></i>Conical Gaufres
+            <img src="images/logo copy.png"  alt="" id="get-location"></i>Conical Gaufres
         </a>
 
 
@@ -70,21 +70,25 @@
             <a href="#home">Home</a>
             <!--<a href="#speciality">speciality</a>-->
             <a href="#popular">Menu</a>
+            <a href="#speciality">Store Locator</a>
             <!--<a href="#gallery">gallery</a>
         <a href="#review">review</a>-->
             <a href="#order">Feedback</a>
             <a href="/DemoARQuickLook.github.io-main/images/conical guafres.pdf" download>Frenchise</a>
-            <a hred="#speciality">Store Locator</a>
         </nav>
 
     </header>
-    <video video src="images/video.mp4.mp4" autoplay="autoplay" loop="true" muted defaultmuted playsinline
-        style=" top: 0; bottom: 0 ; min-width: 100%; min-height: 100%;max-width: 30%; max-height: 30%;  margin: 0 auto; object-fit: cover; background-size: cover; opacity: 1;  display: block;"
+    <div>
+        <video video src="images/video.mp4.mp4" autoplay="autoplay" loop="true" muted defaultmuted playsinline
+ 
+        style=" padding-top: 94px; margin-top: 10%; bottom: 0 ; min-width: 100%; min-height: 100%;max-width: 30%; max-height: 30%; height: 844px;margin: 0 auto; object-fit: cover; background-size: cover; opacity: 1;  display: block;"
         class="" preload="auto">
-        <source max-width: 100%; max-height: 100%; height: 1920px; width: 1920px ; margin: 0 auto;
+        <source 
             src="images/video.mp4.mp4" type="video/mp4">
     </video>
-    <div id="ssb-container" class="ssb-btns-left ssb-anim-slide" style="z-index: 0; left: -99px;">
+    </div>
+    
+    <div id="ssb-container" class="ssb-btns-left ssb-anim-slide" style="z-index: 1000; left: -99px;">
         <ul class="ssb-dark-hover">
             <li id="ssb-btn-0">
                 <p>
@@ -223,34 +227,7 @@
 
     <!-- home section ends -->
 
-    <!-- speciality section starts  -->
-
-<section class="speciality" id="speciality">
-
-    <h1 class="heading"> Store <span>Locator</span> </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <div class="content">
-                <h3 style="font-size: xx-large; font-weight: bold;">Location 1</h3>
-                <p style="font-size: large">Detailed address.</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="content">
-                <h3 style="font-size: xx-large; font-weight: bold;">Location 1</h3>
-                <p style="font-size: large">Detailed address.</p>
-            </div>
-        </div>
-        <div class="box">
-            <div class="content">
-                <h3 style="font-size: xx-large; font-weight: bold;">Location 1</h3>
-                <p style="font-size: large">Detailed address.</p>
-            </div>
-        </div>
-</section>
-    <!-- speciality section ends -->
+   
 
     <!-- popular section starts  -->
 
@@ -373,7 +350,34 @@
     </section>
 
     <!-- popular section ends -->
+ <!-- speciality section starts  -->
 
+ <section class="speciality" id="speciality">
+
+    <h1 class="heading"> Store <span>Locator</span> </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <div class="content">
+                <h3 style="font-size: xx-large; font-weight: bold;">Location 1</h3>
+                <p style="font-size: large">Detailed address.</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="content">
+                <h3 style="font-size: xx-large; font-weight: bold;">Location 1</h3>
+                <p style="font-size: large">Detailed address.</p>
+            </div>
+        </div>
+        <div class="box">
+            <div class="content">
+                <h3 style="font-size: xx-large; font-weight: bold;">Location 1</h3>
+                <p style="font-size: large">Detailed address.</p>
+            </div>
+        </div>
+</section>
+    <!-- speciality section ends -->
     <!-- steps section starts  -->
     <!--
 <div class="step-container">
@@ -618,7 +622,7 @@
 
     <!-- order section ends -->
 
-    <!-- footer section  -->
+    <!-- footer section  
 
     <section class="footer">
         <div class="wpb_wrapper">
@@ -642,7 +646,7 @@
                         <a href="https://www.instagram.com/conicalgaufres" target="_blank" rel="noopener noreferrer"><i
                                 class="icon fa fa-instagram"
                                 style=" font-size:24px!important; color: black; padding-left: 10px;"></i> </a>
-                        <!--<a
+                        <a
                                         href="https://twitter.com/conicalgaufres" target="_blank"
                                         rel="noopener noreferrer"><i class="icon fa fa-twitter-square"
                                             style=" font-size:24px!important; "></i> </a><a
@@ -651,7 +655,7 @@
                                             style=" font-size:24px!important; "></i></a><a
                                         href="https://www.youtube.com/channel/UC5Y_cWA4XARNWORS71EIchQ" target="_blank"
                                         rel="noopener noreferrer"> <i class="icon fa fa-youtube-square"
-                                            style=" font-size:24px!important; "></i></a>-->
+                                            style=" font-size:24px!important; "></i></a>
                     </p>
                 </div>
             </div>
@@ -659,7 +663,27 @@
         <a class="credit" href="https://mohammadshaikh.carrd.co/"> created by <span> Virtual Universo </span> | all
             rights reserved! </a>
     </section>
+-->
+		<footer class="footer-distributed">
 
+			<div class="footer-right">
+
+				<a href="https://www.facebook.com/conicalgaufres"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.instagram.com/conicalgaufres"><i class="fa fa-instagram"></i></a>
+
+			</div>
+
+			<div class="footer-left">
+
+				<p class="footer-links">
+					<a class="link-1" href="#">Home</a>
+					<a href="mailto:conicalgaufres@gmail.com">Contact</a>
+				</p>
+
+				<a style="color: grey;"  href="https://mohammadshaikh.carrd.co/">Virtual universo &copy; 2023</a>
+			</div>
+
+		</footer>
     <!-- scroll top button  -->
     <a href="#" class="fas fa-angle-up" id="scroll-top"></a>
     <!--loader  
