--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 					<a href="mailto:conicalgaufres@gmail.com">Contact</a>
 				</p>
 
-				<a style="color: grey;"  href="https://mohammadshaikh.carrd.co/">Virtual universo &copy; 2023</a>
+				<a style="color: grey;"  href="https://virtualuniverso.carrd.co/">Virtual universo &copy; 2023</a>
 			</div>
 
 		</footer>
